some spacing fix's

--- a/styles.css
+++ b/styles.css
@@ -399,8 +399,8 @@ h2 {
     color: #fff;
     background-color: #222;
     border: 1px solid #666;
-    border-radius: 15px;
-    height: 35px;
+    border-radius: 18px;
+    height: 36px;
     width: 350px;
     font-size: 15px;
     padding-left: 15px;
